# saliencyfilters

./: .gitignore  CMakeLists.txt  README  README.md  __init__.py  test_saliency.py
src/: CMakeLists.txt  evaluate.cpp  pysaliency.cpp  test_saliency.cpp
src/filter/: CMakeLists.txt
src/saliency/: CMakeLists.txt  saliency.cpp  saliency.h
src/superpixel/: CMakeLists.txt  superpixel.cpp
